# webscraper-workspace

./: .gitignore  README.md
docs/StockFund-DAPP/: README.md  fund-easymoney.html
events-crate/: Cargo.toml  package.json  pnpm-lock.yaml
events-crate/jslib/: index.ts  rollup.config.js
events-crate/jslib/event/bindings/: DataValue.ts  FundNetValue.ts  StoreValue.ts
events-crate/src/: event.rs  lib.rs
fund-eastmoney/: .gitignore  Cargo.toml  README.md  package.json
fund-eastmoney/examples/basic-app/: package.json
fund-eastmoney/examples/basic-app/src-tauri/: Cargo.toml  tauri.conf.json
fund-eastmoney/examples/basic-app/src-tauri/src/: main.rs
fund-eastmoney/js/: index.ts  inject.ts  rollup.config.js
fund-eastmoney/src/: lib.rs
plugins/: README.md
plugins/common-plugin/: Cargo.toml  README.md
plugins/common-plugin/.changes/: config.json  initial-release.md  readme.md
plugins/common-plugin/examples/vanilla/: package.json
plugins/common-plugin/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
plugins/common-plugin/examples/vanilla/src-tauri/src/: main.rs
plugins/common-plugin/src/: lib.rs
plugins/fund-eastmoney/: Cargo.toml  README.md
plugins/fund-eastmoney/examples/basic-app/: .gitignore
plugins/fund-eastmoney/js/: crawler.ts  crawler_lazy.ts  index.ts  inject.ts  rollup.config.js  tsconfig.json
plugins/fund-eastmoney/src/: lib.rs
plugins/httpproxy/: Cargo.toml
plugins/httpproxy/src/: lib.rs
plugins/tauri-plugin-datarpc/: Cargo.toml  README.md
plugins/tauri-plugin-datarpc/.cargo/: config.toml
plugins/tauri-plugin-datarpc/.changes/: config.json  initial-release.md  readme.md
plugins/tauri-plugin-datarpc/examples/: gen_key.rs
plugins/tauri-plugin-datarpc/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
plugins/tauri-plugin-datarpc/examples/vanilla/src-tauri/migrations/: 20230906025513_user.sql  20230906070600_user_lastname.sql  20230906070600_users_lastname.sql  20230911023027_task.sql  20230911024252_users_seed.sql
plugins/tauri-plugin-datarpc/examples/vanilla/src-tauri/src/: main.rs
plugins/tauri-plugin-datarpc/src/: config.rs  error.rs  lib.rs  openapi.yaml
plugins/tauri-plugin-datarpc/src/_test_utils/: mod.rs
plugins/tauri-plugin-datarpc/src/crypt/: pwd.rs  token.rs
plugins/tauri-plugin-datarpc/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
plugins/tauri-plugin-datarpc/src/model/store/: error.rs  mod.rs
plugins/tauri-plugin-datarpc/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_hello.rs  routes_login.rs
plugins/tauri-plugin-datarpc/src/web/rpc/: task_rpc.rs
plugins/tauri-plugin-httpproxy/: Cargo.toml
plugins/tauri-plugin-jsinject/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  temp.html  vite.config.ts
plugins/tauri-plugin-jsinject/.changes/: config.json  initial-release.md  readme.md
plugins/tauri-plugin-jsinject/js/: inject.ts
plugins/tauri-plugin-jsinject/src/: lib.rs
plugins/tauri-plugin-localhost/: Cargo.toml
plugins/tauri-plugin-localhost/src/: lib.rs
quantix-bun/: README.md  bun.lockb  index.html  package.json  tsconfig.json
quantix-bun/src/: v-main.ts
quantix-dapp/: .gitignore  README.md  bun.lockb  index.html  package.json  pcss.config.js  pnpm-lock.yaml  postcss.config.cjs  postcss.config.js  rollup.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
quantix-dapp/dist-css/: main.css
quantix-dapp/dist-jslib/: finance-yahoo-scraper.min.js  fund-eastmoney-scraper.min.js  url_scraper.d.ts  url_scraper.js  utils.d.ts  utils.js
quantix-dapp/dist-jslib/finance-yahoo/: scraper.js
quantix-dapp/dist-jslib/fund-eastmoney/: scraper.js
quantix-dapp/jslib/: url_scraper.ts  utils.ts
quantix-dapp/jslib/finance-yahoo/: scraper.ts
quantix-dapp/jslib/fund-eastmoney/: scraper.ts
quantix-dapp/src/: router.ts
quantix-dapp/src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
quantix-dapp/src-tauri/src/: ctx.rs  main.rs  scraper.rs
quantix-dapp/src-tauri/src/ipc/: mod.rs  params.rs  project.rs  response.rs  scrape_task.rs  task.rs
quantix-dapp/src-tauri/src/model/: bmc_base.rs  mod.rs  project.rs  scrape_task.rs  seed_for_dev.rs  task.rs
quantix-dapp/src-tauri/src/model/store/: surreal_modql.rs  surreal_store.rs
quantix-dapp/src-ui/: temp.html  temp.pcss
quantix-dapp/src-ui/pcss/: main.pcss  var-colors.pcss
quantix-dapp/src-ui/pcss/view/: nav-v.pcss  scraper-data-c.pcss  scraper-data-v.pcss  scraper-link-v.pcss  scraper-tasks-c.pcss  scraper-tasks.pcss  scraper-v.pcss
quantix-dapp/src-ui/src/bindings/: ScrapeTask.ts  ScrapeTaskForCreate.ts  Task.ts
quantix-dapp/src-ui/src/model/: index.ts
quantix-dapp/src-ui/src/view/: app-v.ts  index.ts  nav-v.ts  scraper-data-c.ts  scraper-data.ts  scraper-link-c.ts  scraper-link.ts  scraper-tasks-c.ts  scraper-tasks.ts  scraper-v.ts
quantix-dapp/src/bindings/: ScrapeTaskForCreate.ts  ScrapeTaskForUpdate.ts  TaskForCreate.ts  index.ts
quantix-dapp/src/model/: index.ts
quantix-dapp/src/pcss/view/: nav-v.pcss  project-v.pcss  scraper-link-c.pcss  scraper-tasks-c.pcss  scraper-v.pcss
quantix-dapp/src/view/: app-v.ts  project-v.ts  scraper-data-c.ts  scraper-link-c.ts  scraper-tasks-c.ts  scraper-v.ts
webrape-dapp/: README.md  bun.lockb  index.html  package.json  pnpm-lock.yaml  temp.txt
webrape-dapp/jslib/: jsA.ts  jsB.ts  rollup.config.js  url_scraper.ts  utils.ts
webrape-dapp/jslib/event/bindings/: BomaEvent.ts  FataEvent.ts  ShopValue.ts  StringValue.ts  index.ts
webrape-dapp/jslib/events/bindings/: README.md  index.ts
webrape-dapp/jslib/finance-yahoo/: crawler.ts  scraper.ts
webrape-dapp/jslib/fund-eastmoney/: crawler.ts  scraper.ts
webrape-dapp/src/: main.ts
webrape-dapp/src-tauri/: Cargo.toml  tauri.conf.json
webrape-dapp/src-tauri/src/: event.rs  main.rs
webrape-events/: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  pnpm-lock.yaml
webrape-events/jslib/: index.ts  tsconfig.json
webrape-events/jslib/event/bindings/: DataValue.ts  FataEvent.ts  HTMLAnchorElementValue.ts  ProductValue.ts
webrape-events/src/: event.rs  lib.rs
(+6 files in other folders)
