[package]
name = "tauri-plugin-httpproxy"
version = "0.1.0"
description = "Expose your apps assets through a httpproxy server instead of the default custom protocol."

edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1" }

# async-compression = { version = "0.4.0", features = ["tokio", "brotli", "gzip", "zlib", "zstd"], optional = true }
# async-trait = "0.1.67"
# bstr = "1.0.0"
# bytes = "1.0.0"
# futures = "0.3.11"
# http = "0.2.0"
hyper = { version = "0.14.15", features = ["client", "http1", "server", "tcp"] }
# hyper-rustls = { version = "0.24.0", default-features = false, features = ["http1", "logging", "tls12", "webpki-tokio"], optional = true }
# hyper-tls = { version = "0.5.0", optional = true }
# hyper-tungstenite = "0.11.1"
# moka = { version = "0.11.0", features = ["future"], optional = true }
# openssl = { version = "0.10.39", optional = true }
# rand = { version = "0.8.0", optional = true }
# rcgen = { version = "0.11.0", features = ["x509-parser"], optional = true }
# thiserror = "1.0.30"
# time = { version = "0.3.7", optional = true }
tokio = { version = "1.32.0", features = ["rt"] }
tokio-rustls = "0.24.0"
# tokio-tungstenite = "0.20.0"
# tokio-util = { version = "0.7.0", features = ["io"], optional = true }
tracing = { version = "0.1.21", features = ["log"] }
# url = "2.4.0"
hudsucker = "0.20.0"
rustls-pemfile = "1.0.0"
tracing-subscriber = "0.3.17"


[dev-dependencies]
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"] }
criterion = { version = "0.5.0", features = ["async_tokio"] }
reqwest = "0.11.10"
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.0"
tls-listener = { version = "0.7.0", features = ["rustls", "hyper-h1", "hyper-h2"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing-subscriber = "0.3.17"
x509-parser = "0.15.0"
hyper-tls = { version = "0.5.0", optional = false }
