[package]
name = "tauri-plugin-localhost"
version = "0.1.0"
description = "Expose your apps assets through a localhost server instead of the default custom protocol."

edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12"
http = "0.2"
tauri = { version = "1" }