[package]
name = "app"
version = "0.1.0"
description = ""
authors = [""]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.63"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
## -- Serde/Json
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with_macros = "3"
base64 = "0.21.2"
chrono = "0.4.26"
url = "2.4.0"
## -- Tauri & SurrealDB
tauri = { version = "1.4", features = [ "http-all", "window-all", "protocol-all", "shell-all", "clipboard-all", "dialog-all"] }
# For dev and to easy first time build experience, just have memory surrealdb for  now.
# Remove `default-feature=false, features = ...` to enable persistent storage.
surrealdb = {version = "1.0.0-beta.9", default-features=false, features = ['kv-mem'] }
## -- Others
parking_lot = "0.12"
modql = "0.2.0"
# NOTE: , features = ["format"] would be nice, but it is very heavy, and sometime have compiles issues with swc_ components
ts-rs = { version = "7" }
fraction = "0.13.1"

tauri-plugin-jsinject = { path = "../../plugins/tauri-plugin-jsinject" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-localhost = { path = "../../plugins/tauri-plugin-localhost" }
tauri-plugin-httpproxy = { path = "../../plugins/tauri-plugin-httpproxy" }

webrape-events = { path = "../../webrape-events" }
portpicker = "0.1.1"
tauri-utils = "1.4.0"

async-std = "1.12.0"

[dev-dependencies]
anyhow = "1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
