[package]
authors = ["Conan"]
default-run = "app"
description = "Fund Eastmoney Data Scraper Test App"
edition = "2021"
license = ""
name = "app"
repository = ""
version = "0.1.0"

[build-dependencies]
tauri-build = {version = "1.4.0", features = [] }

[dependencies]
sadness-generator = "0.5"
fund-easymoney = {path = "../../../"}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.4.1", features = ["api-all"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
