[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Me" ]
repository = ""
edition = "2021"
rust-version = "1.60"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.4.0" }
common-plugin = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "1.4.0" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
