[package]
name = "datarpcapp"
version = "0.1.0"
description = "A Tauri App: DataRPC Example"
authors = [ "You" ]
repository = ""
edition = "2021"
rust-version = "1.60"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1" }
tauri-plugin-datarpc = { path = "../../../" }

portpicker = "0.1.1"

# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[build-dependencies]
tauri-build = { version = "1" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
